[build-system]
requires = ["scikit-build-core>=0.5"]
build-backend = "scikit_build_core.build"

[project]
name = "openmeta"
version = "0.3.0"
description = "Safe, format-agnostic metadata reads (EXIF/TIFF decoding)"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE.md" }

[tool.scikit-build]
minimum-version = "build-system.requires"
cmake.version = "CMakeLists.txt"

[tool.scikit-build.cmake.define]
OPENMETA_BUILD_PYTHON = "ON"
OPENMETA_BUILD_WHEEL = "OFF"
OPENMETA_BUILD_TOOLS = "OFF"
OPENMETA_BUILD_TESTS = "OFF"
OPENMETA_BUILD_FUZZERS = "OFF"
OPENMETA_BUILD_FUZZTEST = "OFF"
OPENMETA_BUILD_DOCS = "OFF"
OPENMETA_BUILD_SHARED = "OFF"
OPENMETA_BUILD_STATIC = "ON"
